# ucam

./: .gitignore  README.org
capture/: Cargo.toml  capture.toml.sample
capture/src/: err.rs  main.rs
chat/: Cargo.toml  chat.toml.sample
chat/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  main.rs
server/: Cargo.toml  protocol.toml.sample  server.toml.sample
server/certs/: gen.sh  rootCA.cnf  rootCA.csr.cnf  v3.ext
server/src/: auth.rs  err.rs  main.rs  model.rs
storage/: Cargo.toml  storage.toml.sample
storage/src/: main.rs
ui/: index.html  package-lock.json  package.json  webpack  webpack.config.js
ui/src/: app.jsx  index.jsx  spinner.jsx  store.jsx
ui/src/components/: app.jsx  authform.jsx  centercentershell.jsx  loading.jsx
ui/src/context/: actions.js  index.jsx  messages.js  reducers.js
ui/src/hooks/: useAppContext.js  useAuthState.js  useStateSelectors.js  useWebSocket.js
ui/src/services/: api.js  auth.js  cookies.js
