[package]
name = "capture"
version = "0.1.0"
authors = ["Lincoln de Sousa <lincoln@clarete.li>"]
edition = "2018"

[dependencies]
env_logger = "*"
log = "*"
actix = "0.9"
actix-codec = "0.2.0"
actix-rt = "1.0"

anyhow = "1.0"
awc = "1.0.1"
futures = "0.3.1"
bytes = "0.5.3"

gst = { package = "gstreamer", version = "0.15", features = ["v1_14"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.15" }
gst-sdp = { package = "gstreamer-sdp", version = "0.15", features = ["v1_14"] }

serde = "1"
serde_derive = "1"
serde_json = "1"