[package]
name = "capture"
version = "0.1.0"
authors = ["Lincoln de Sousa <lincoln@clarete.li>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
glib = "0.9"
gst = { package = "gstreamer", version = "0.15", features = ["v1_14"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.15", features = ["v1_14"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.15" }

lazy_static = "1.2.0"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"

env_logger = "*"
log = "*"
actix = "0.9"
actix-codec = "0.2.0"
actix-rt = "1.0"
awc = "1.0.1"

futures = "0.3"
bytes = "0.5.3"
