[package]
name = "capture"
version = "0.1.0"
authors = ["Lincoln de Sousa <lincoln@clarete.li>"]
edition = "2018"

[dependencies]
protocol = { path = "../protocol" }
base64 = "*"
failure = "0.1.5"
glib = "0.9"
gst = { package = "gstreamer", version = "0.15", features = ["v1_14"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.15", features = ["v1_14"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.15" }

lazy_static = "1.2.0"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"

env_logger = "*"
log = "*"
toml = "0.5"

actix = "0.10.0-alpha.2"
actix-codec = "0.2.0"
actix-rt = "1.0"
awc = { version = "1.0.1", features = ["openssl"] }
openssl = "0.10"

futures = "0.3"
bytes = "0.5.3"
