[package]
name = "server"
version = "0.1.0"
authors = ["Lincoln de Sousa <lincoln@clarete.li>"]
edition = "2018"

[dependencies]
protocol = { path = "../protocol" }
env_logger = "*"
log = "*"
actix = "0.9"
actix-rt = "1.0"
actix-web = { version = "2.0", features = ["openssl"] }
actix-web-actors = "2.0"
openssl = "0.10"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_qs = "0.5"
serde_json = "1.0"
