[package]
name = "server"
version = "0.1.0"
authors = ["Lincoln de Sousa <lincoln@clarete.li>"]
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
base64 = "*"
env_logger = "*"
log = "*"
actix = "0.13"
actix-rt = "2.7.0"
actix-web = { version = "4.1", features = ["openssl"] }
actix-web-actors = "4.1"
openssl = "0.10"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_qs = "0.5"
serde_json = "1.0"
