[package]
name = "storage"
version = "0.1.0"
authors = ["Lincoln de Sousa <lincoln@comum.org>"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

gio = "0.8.1"
glib = "0.9.3"
gstreamer = "0.15"
gstreamer-rtsp = "0.15"
gstreamer-rtsp-server = "0.15"
gstreamer-rtsp-server-sys = "0.8.1"
